--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -653,6 +653,10 @@ video {
   bottom: -10%;
 }
 
+.bottom-32 {
+  bottom: 8rem;
+}
+
 .right-8 {
   right: 2rem;
 }
@@ -681,8 +685,8 @@ video {
   right: -7rem;
 }
 
-.top-10 {
-  top: 2.5rem;
+.top-2 {
+  top: 0.5rem;
 }
 
 .bottom-4 {
@@ -697,32 +701,12 @@ video {
   bottom: -3rem;
 }
 
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
-.-bottom-20 {
-  bottom: -5rem;
-}
-
-.bottom-1 {
-  bottom: 0.25rem;
-}
-
-.bottom-20 {
-  bottom: 5rem;
-}
-
-.bottom-32 {
-  bottom: 8rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
 .bottom-12 {
   bottom: 3rem;
+}
+
+.bottom-6 {
+  bottom: 1.5rem;
 }
 
 .z-50 {
@@ -871,6 +855,22 @@ video {
   height: 2rem;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
 .max-h-40 {
   max-height: 10rem;
 }
@@ -916,12 +916,24 @@ video {
   width: fit-content;
 }
 
+.w-500 {
+  width: 31.25rem;
+}
+
 .w-307 {
   width: 19.1875rem;
 }
 
 .w-7 {
   width: 1.75rem;
+}
+
+.w-3\/6 {
+  width: 50%;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
 }
 
 .w-eightyPercent {
@@ -972,10 +984,6 @@ video {
   width: 15rem;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
-}
-
 .w-80 {
   width: 20rem;
 }
@@ -992,24 +1000,28 @@ video {
   width: 5rem;
 }
 
-.w-2 {
-  width: 0.5rem;
+.w-5\/6 {
+  width: 83.333333%;
 }
 
-.w-2\/4 {
-  width: 50%;
+.w-322 {
+  width: 20.125rem;
 }
 
-.w-3\/4 {
-  width: 75%;
+.w-5 {
+  width: 1.25rem;
 }
 
-.w-2\/5 {
-  width: 40%;
+.w-16 {
+  width: 4rem;
 }
 
-.w-3\/6 {
-  width: 50%;
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-ninetyFivePercent {
+  width: 95%;
 }
 
 .min-w-full {
@@ -1061,6 +1073,11 @@ video {
 
 .translate-y-8 {
   --tw-translate-y: 2rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-20 {
+  --tw-translate-x: 5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1350,11 +1367,6 @@ video {
   border-bottom-width: 4px;
 }
 
-.border-brandGray16x {
-  --tw-border-opacity: 1;
-  border-color: rgb(236 236 236 / var(--tw-border-opacity));
-}
-
 .border-brandBlue1x {
   --tw-border-opacity: 1;
   border-color: rgb(57 146 204 / var(--tw-border-opacity));
@@ -1579,11 +1591,6 @@ video {
   padding-bottom: 7rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .py-48 {
   padding-top: 12rem;
   padding-bottom: 12rem;
@@ -1614,14 +1621,19 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
 
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .py-18px {
@@ -1634,9 +1646,19 @@ video {
   padding-right: 1rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .py-tenPixel {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .py-24 {
@@ -1659,11 +1681,6 @@ video {
   padding-bottom: 3.5rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
@@ -1674,29 +1691,14 @@ video {
   padding-bottom: 2.25rem;
 }
 
-.py-40 {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .px-24 {
   padding-left: 6rem;
   padding-right: 6rem;
-}
-
-.py-18 {
-  padding-top: 4.5rem;
-  padding-bottom: 4.5rem;
 }
 
 .py-12 {
@@ -1718,6 +1720,10 @@ video {
 
 .pt-10 {
   padding-top: 2.5rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .pb-5 {
@@ -1764,10 +1770,6 @@ video {
   padding-top: 8rem;
 }
 
-.pt-40 {
-  padding-top: 10rem;
-}
-
 .pb-8 {
   padding-bottom: 2rem;
 }
@@ -1788,8 +1790,20 @@ video {
   padding-left: 1.25rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
+.pt-40 {
+  padding-top: 10rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
+}
+
+.pt-28 {
+  padding-top: 7rem;
 }
 
 .text-left {
@@ -1832,10 +1846,6 @@ video {
   font-family: avenir-light, sans-serif;
 }
 
-.font-milligramRegular400 {
-  font-family: Milligram Trial Regular, sans-serif;
-}
-
 .font-milligramLight300 {
   font-family: Milligram Trial Light, sans-serif;
 }
@@ -1855,14 +1865,14 @@ video {
   line-height: 2.5rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-base {
@@ -1890,12 +1900,16 @@ video {
   line-height: 1;
 }
 
-.font-normal {
-  font-weight: 400;
+.font-light {
+  font-weight: 300;
 }
 
 .font-medium {
   font-weight: 500;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .font-extrabold {
@@ -1904,10 +1918,6 @@ video {
 
 .font-black {
   font-weight: 900;
-}
-
-.font-light {
-  font-weight: 300;
 }
 
 .font-bold {
@@ -2053,6 +2063,39 @@ video {
   text-shadow: -2px 3px 0px #FFFFFF, -3.5px 4px 0px #142D36;
 }
 
+#journey_section::-webkit-scrollbar{
+  width: 5px;
+  height: 15px;
+  box-shadow: 2px 2px 4px #ECECEC;
+}
+
+#journey_section::-webkit-scrollbar:hover{
+  width: 10px;
+  -webkit-transition: 10ms ease-in-out;
+  transition: 10ms ease-in-out;
+}
+
+#journey_section::-webkit-scrollbar-track{
+  background-color: #ECECEC;
+  /* box-shadow:  0px 2px 4px rgb(74, 75, 74); */
+}
+
+#journey_section::-webkit-scrollbar-thumb{
+  background-color: #3992CC;
+  border-radius: 0px;
+  border-left: solid 5px #3992CC;
+  border-right: solid 5px transparent;
+  border-top: solid 2px transparent;
+  border-bottom: solid 2px transparent;
+  width: 10px;
+}
+
+#journey_section::-webkit-scrollbar-thumb:hover{
+  background-color: #41a4e6;
+  -webkit-transition: 10ms ease-in-out;
+  transition: 10ms ease-in-out;
+}
+
 .placeholder\:font-avenirRegular::-moz-placeholder {
   font-family: avenir-regular, sans-serif;
 }
@@ -2068,6 +2111,16 @@ video {
 
 .placeholder\:text-xl::placeholder {
   font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.placeholder\:text-lg::-moz-placeholder {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.placeholder\:text-lg::placeholder {
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
@@ -2170,14 +2223,6 @@ video {
     left: -10rem;
   }
 
-  .sm\:-bottom-40 {
-    bottom: -10rem;
-  }
-
-  .sm\:-bottom-10 {
-    bottom: -2.5rem;
-  }
-
   .sm\:-bottom-20 {
     bottom: -5rem;
   }
@@ -2190,6 +2235,18 @@ video {
     height: 20rem;
   }
 
+  .sm\:h-9 {
+    height: 2.25rem;
+  }
+
+  .sm\:h-20 {
+    height: 5rem;
+  }
+
+  .sm\:h-24 {
+    height: 6rem;
+  }
+
   .sm\:w-16 {
     width: 4rem;
   }
@@ -2200,6 +2257,30 @@ video {
 
   .sm\:w-80 {
     width: 20rem;
+  }
+
+  .sm\:w-500 {
+    width: 31.25rem;
+  }
+
+  .sm\:w-9 {
+    width: 2.25rem;
+  }
+
+  .sm\:w-eightyPercent {
+    width: 80%;
+  }
+
+  .sm\:w-20 {
+    width: 5rem;
+  }
+
+  .sm\:w-24 {
+    width: 6rem;
+  }
+
+  .sm\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .sm\:w-full {
@@ -2215,6 +2296,14 @@ video {
     flex-direction: row;
   }
 
+  .sm\:gap-12 {
+    gap: 3rem;
+  }
+
+  .sm\:p-5 {
+    padding: 1.25rem;
+  }
+
   .sm\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
@@ -2228,6 +2317,20 @@ video {
   .sm\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+  }
+
+  .sm\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .sm\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .sm\:pl-5 {
+    padding-left: 1.25rem;
   }
 
   .sm\:text-4xl {
@@ -2254,15 +2357,30 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .placeholder\:sm\:text-xl::-moz-placeholder {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .placeholder\:sm\:text-xl::placeholder {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:first\:p-5:first-child {
+    padding: 1.25rem;
+  }
 }
 
 @media (min-width: 768px) {
   .md\:left-28 {
     left: 7rem;
-  }
-
-  .md\:-bottom-60 {
-    bottom: -15rem;
   }
 
   .md\:right-36 {
@@ -2271,14 +2389,6 @@ video {
 
   .md\:-right-36 {
     right: -9rem;
-  }
-
-  .md\:-bottom-20 {
-    bottom: -5rem;
-  }
-
-  .md\:-bottom-10 {
-    bottom: -2.5rem;
   }
 
   .md\:block {
@@ -2303,6 +2413,10 @@ video {
 
   .md\:h-6 {
     height: 1.5rem;
+  }
+
+  .md\:h-9 {
+    height: 2.25rem;
   }
 
   .md\:max-h-52 {
@@ -2382,6 +2496,18 @@ video {
     width: 10rem;
   }
 
+  .md\:w-3\/6 {
+    width: 50%;
+  }
+
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .md\:w-9 {
+    width: 2.25rem;
+  }
+
   .md\:max-w-xl {
     max-width: 36rem;
   }
@@ -2416,6 +2542,10 @@ video {
     gap: 0px;
   }
 
+  .md\:gap-16 {
+    gap: 4rem;
+  }
+
   .md\:space-y-3 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -2426,6 +2556,12 @@ video {
     --tw-space-y-reverse: 0;
     margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+  }
+
+  .md\:space-y-32 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(8rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(8rem * var(--tw-space-y-reverse));
   }
 
   .md\:rounded-eighty {
@@ -2470,6 +2606,31 @@ video {
     padding-right: 3rem;
   }
 
+  .md\:py-48 {
+    padding-top: 12rem;
+    padding-bottom: 12rem;
+  }
+
+  .md\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
+  .md\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .md\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
+  .md\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
   .md\:pb-0 {
     padding-bottom: 0px;
   }
@@ -2480,6 +2641,10 @@ video {
 
   .md\:pr-16 {
     padding-right: 4rem;
+  }
+
+  .md\:pt-40 {
+    padding-top: 10rem;
   }
 
   .md\:text-left {
@@ -2535,11 +2700,6 @@ video {
     line-height: 2.5rem;
   }
 
-  .md\:text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
-  }
-
   .md\:first-letter\:top-fiftyPercent::first-letter {
     top: 50%;
   }
@@ -2560,6 +2720,10 @@ video {
 
   .lg\:bottom-32 {
     bottom: 8rem;
+  }
+
+  .lg\:bottom-12 {
+    bottom: 3rem;
   }
 
   .lg\:flex {
@@ -2586,16 +2750,12 @@ video {
     height: 31.25rem;
   }
 
-  .lg\:h-18 {
-    height: 4.5rem;
+  .lg\:h-14 {
+    height: 3.5rem;
   }
 
   .lg\:h-9 {
     height: 2.25rem;
-  }
-
-  .lg\:h-14 {
-    height: 3.5rem;
   }
 
   .lg\:w-48 {
@@ -2643,8 +2803,8 @@ video {
     width: 60%;
   }
 
-  .lg\:w-18 {
-    width: 4.5rem;
+  .lg\:w-14 {
+    width: 3.5rem;
   }
 
   .lg\:w-9 {
@@ -2653,10 +2813,6 @@ video {
 
   .lg\:w-fortyPercent {
     width: 40%;
-  }
-
-  .lg\:w-14 {
-    width: 3.5rem;
   }
 
   .lg\:flex-row {
@@ -2758,14 +2914,9 @@ video {
     line-height: 1;
   }
 
-  .lg\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .lg\:text-xl {
@@ -2773,9 +2924,19 @@ video {
     line-height: 1.75rem;
   }
 
-  .lg\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .lg\:shadow-none {
@@ -2792,10 +2953,6 @@ video {
 
   .xl\:-bottom-twelvePercent {
     bottom: -12%;
-  }
-
-  .xl\:w-full {
-    width: 100%;
   }
 
   .xl\:gap-10 {
