--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,7 +29,7 @@
 #journey_section::-webkit-scrollbar-thumb{
     background-color: #3992CC;
     border-radius: 0px;
-    border-left: solid 5px #3992CC;
+    border-left: solid 5px transparent;
     border-right: solid 5px transparent;
     border-top: solid 2px transparent;
     border-bottom: solid 2px transparent;
