--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -569,6 +569,10 @@ video {
   position: static;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -701,12 +705,24 @@ video {
   bottom: -3rem;
 }
 
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
 .bottom-12 {
   bottom: 3rem;
 }
 
-.bottom-6 {
-  bottom: 1.5rem;
+.left-20 {
+  left: 5rem;
+}
+
+.-left-20 {
+  left: -5rem;
+}
+
+.-top-20 {
+  top: -5rem;
 }
 
 .z-50 {
@@ -725,6 +741,10 @@ video {
   z-index: 20;
 }
 
+.z-200 {
+  z-index: 200;
+}
+
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
@@ -740,6 +760,11 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-40 {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
 .mb-2 {
@@ -831,8 +856,12 @@ video {
   height: 12rem;
 }
 
-.h-28 {
-  height: 7rem;
+.h-16 {
+  height: 4rem;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .h-350 {
@@ -841,6 +870,10 @@ video {
 
 .h-4 {
   height: 1rem;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .h-60px {
@@ -855,20 +888,16 @@ video {
   height: 2rem;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-ninetyPercent {
+  height: 90%;
 }
 
-.h-16 {
-  height: 4rem;
+.h-eightyPercent {
+  height: 80%;
 }
 
-.h-20 {
-  height: 5rem;
-}
-
-.h-10 {
-  height: 2.5rem;
+.h-40 {
+  height: 10rem;
 }
 
 .max-h-40 {
@@ -916,24 +945,12 @@ video {
   width: fit-content;
 }
 
-.w-500 {
-  width: 31.25rem;
-}
-
 .w-307 {
   width: 19.1875rem;
 }
 
 .w-7 {
   width: 1.75rem;
-}
-
-.w-3\/6 {
-  width: 50%;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
 }
 
 .w-eightyPercent {
@@ -952,16 +969,12 @@ video {
   width: 3rem;
 }
 
-.w-eightyFivePercent {
-  width: 85%;
+.w-16 {
+  width: 4rem;
 }
 
-.w-24 {
-  width: 6rem;
-}
-
-.w-28 {
-  width: 7rem;
+.w-20 {
+  width: 5rem;
 }
 
 .w-seventyPercent {
@@ -984,44 +997,28 @@ video {
   width: 15rem;
 }
 
-.w-80 {
-  width: 20rem;
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-60px {
   width: 3.75rem;
 }
 
+.w-28 {
+  width: 7rem;
+}
+
 .w-thirtyFivePercent {
   width: 35%;
 }
 
-.w-20 {
-  width: 5rem;
-}
-
-.w-5\/6 {
-  width: 83.333333%;
-}
-
-.w-322 {
-  width: 20.125rem;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
 .w-ninetyFivePercent {
   width: 95%;
+}
+
+.w-500 {
+  width: 31.25rem;
 }
 
 .min-w-full {
@@ -1050,6 +1047,10 @@ video {
 
 .max-w-2xl {
   max-width: 42rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
 }
 
 .grow {
@@ -1178,10 +1179,6 @@ video {
   gap: 0.625rem;
 }
 
-.gap-16 {
-  gap: 4rem;
-}
-
 .gap-3 {
   gap: 0.75rem;
 }
@@ -1280,12 +1277,6 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
-.space-y-32 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(8rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(8rem * var(--tw-space-y-reverse));
-}
-
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
@@ -1305,6 +1296,10 @@ video {
 
 .overflow-x-auto {
   overflow-x: auto;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
 }
 
 .overflow-x-hidden {
@@ -1543,12 +1538,12 @@ video {
   background-color: rgb(57 161 255 / var(--tw-bg-opacity));
 }
 
-.p-10 {
-  padding: 2.5rem;
+.bg-black\/30 {
+  background-color: rgb(0 0 0 / 0.3);
 }
 
-.p-5 {
-  padding: 1.25rem;
+.p-10 {
+  padding: 2.5rem;
 }
 
 .px-10 {
@@ -1591,11 +1586,6 @@ video {
   padding-bottom: 7rem;
 }
 
-.py-48 {
-  padding-top: 12rem;
-  padding-bottom: 12rem;
-}
-
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1621,9 +1611,9 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .py-7 {
@@ -1656,21 +1646,6 @@ video {
   padding-bottom: 0.625rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
 .px-fivePercent {
   padding-left: 5%;
   padding-right: 5%;
@@ -1696,14 +1671,19 @@ video {
   padding-right: 0.5rem;
 }
 
-.px-24 {
-  padding-left: 6rem;
-  padding-right: 6rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.py-twentyPercent {
+  padding-top: 20%;
+  padding-bottom: 20%;
 }
 
 .pt-8 {
@@ -1718,16 +1698,16 @@ video {
   padding-bottom: 6rem;
 }
 
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
 .pt-10 {
   padding-top: 2.5rem;
 }
 
 .pb-2 {
   padding-bottom: 0.5rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
 }
 
 .pr-2 {
@@ -1770,6 +1750,10 @@ video {
   padding-top: 8rem;
 }
 
+.pt-36 {
+  padding-top: 9rem;
+}
+
 .pb-8 {
   padding-bottom: 2rem;
 }
@@ -1786,24 +1770,28 @@ video {
   padding-bottom: 5rem;
 }
 
-.pl-5 {
-  padding-left: 1.25rem;
-}
-
-.pt-40 {
-  padding-top: 10rem;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
-.pt-36 {
-  padding-top: 9rem;
-}
-
 .pt-28 {
   padding-top: 7rem;
+}
+
+.pl-24 {
+  padding-left: 6rem;
+}
+
+.pr-16 {
+  padding-right: 4rem;
+}
+
+.pr-10 {
+  padding-right: 2.5rem;
+}
+
+.pr-12 {
+  padding-right: 3rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
 .text-left {
@@ -1850,9 +1838,9 @@ video {
   font-family: Milligram Trial Light, sans-serif;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-lg {
@@ -1865,16 +1853,6 @@ video {
   line-height: 2.5rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1885,14 +1863,19 @@ video {
   line-height: 1rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-6xl {
@@ -2029,6 +2012,18 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -2083,7 +2078,7 @@ video {
 #journey_section::-webkit-scrollbar-thumb{
   background-color: #3992CC;
   border-radius: 0px;
-  border-left: solid 5px #3992CC;
+  border-left: solid 5px transparent;
   border-right: solid 5px transparent;
   border-top: solid 2px transparent;
   border-bottom: solid 2px transparent;
@@ -2181,6 +2176,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:shadow-gray-700:hover {
   --tw-shadow-color: #374151;
   --tw-shadow: var(--tw-shadow-colored);
@@ -2189,6 +2190,11 @@ video {
 .focus\:bg-blue-700:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
+.focus\:bg-brandDarkGreen2x:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 56 69 / var(--tw-bg-opacity));
 }
 
 .focus\:shadow-lg:focus {
@@ -2231,10 +2237,6 @@ video {
     height: 4rem;
   }
 
-  .sm\:h-80 {
-    height: 20rem;
-  }
-
   .sm\:h-9 {
     height: 2.25rem;
   }
@@ -2247,28 +2249,33 @@ video {
     height: 6rem;
   }
 
-  .sm\:w-16 {
-    width: 4rem;
+  .sm\:h-80 {
+    height: 20rem;
   }
 
-  .sm\:w-350 {
-    width: 21.875rem;
+  .sm\:h-auto {
+    height: auto;
   }
 
-  .sm\:w-80 {
-    width: 20rem;
+  .sm\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
   }
 
   .sm\:w-500 {
     width: 31.25rem;
   }
 
-  .sm\:w-9 {
-    width: 2.25rem;
+  .sm\:w-16 {
+    width: 4rem;
   }
 
   .sm\:w-eightyPercent {
     width: 80%;
+  }
+
+  .sm\:w-9 {
+    width: 2.25rem;
   }
 
   .sm\:w-20 {
@@ -2279,8 +2286,16 @@ video {
     width: 6rem;
   }
 
+  .sm\:w-350 {
+    width: 21.875rem;
+  }
+
   .sm\:w-2\/3 {
     width: 66.666667%;
+  }
+
+  .sm\:w-80 {
+    width: 20rem;
   }
 
   .sm\:w-full {
@@ -2309,11 +2324,6 @@ video {
     padding-right: 4rem;
   }
 
-  .sm\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
   .sm\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
@@ -2327,6 +2337,11 @@ video {
   .sm\:py-1 {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
+  }
+
+  .sm\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
   .sm\:pl-5 {
@@ -2343,24 +2358,19 @@ video {
     line-height: 2rem;
   }
 
-  .sm\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
   .sm\:text-5xl {
     font-size: 3rem;
     line-height: 1;
   }
 
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .sm\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .sm\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
   }
 
   .placeholder\:sm\:text-xl::-moz-placeholder {
@@ -2371,10 +2381,6 @@ video {
   .placeholder\:sm\:text-xl::placeholder {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .sm\:first\:p-5:first-child {
-    padding: 1.25rem;
   }
 }
 
@@ -2389,6 +2395,18 @@ video {
 
   .md\:-right-36 {
     right: -9rem;
+  }
+
+  .md\:-left-20 {
+    left: -5rem;
+  }
+
+  .md\:top-fiftyPercent {
+    top: 50%;
+  }
+
+  .md\:top-auto {
+    top: auto;
   }
 
   .md\:block {
@@ -2415,12 +2433,20 @@ video {
     height: 1.5rem;
   }
 
-  .md\:h-9 {
-    height: 2.25rem;
+  .md\:h-full {
+    height: 100%;
   }
 
   .md\:max-h-52 {
     max-height: 13rem;
+  }
+
+  .md\:w-3\/6 {
+    width: 50%;
+  }
+
+  .md\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .md\:w-seventyPercent {
@@ -2463,10 +2489,6 @@ video {
     width: 90%;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:w-6 {
     width: 1.5rem;
   }
@@ -2496,18 +2518,6 @@ video {
     width: 10rem;
   }
 
-  .md\:w-3\/6 {
-    width: 50%;
-  }
-
-  .md\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .md\:w-9 {
-    width: 2.25rem;
-  }
-
   .md\:max-w-xl {
     max-width: 36rem;
   }
@@ -2522,12 +2532,25 @@ video {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .md\:-translate-x-0 {
+    --tw-translate-x: -0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
 
+  .md\:justify-center {
+    justify-content: center;
+  }
+
   .md\:justify-between {
     justify-content: space-between;
+  }
+
+  .md\:gap-16 {
+    gap: 4rem;
   }
 
   .md\:gap-10 {
@@ -2540,10 +2563,6 @@ video {
 
   .md\:gap-0 {
     gap: 0px;
-  }
-
-  .md\:gap-16 {
-    gap: 4rem;
   }
 
   .md\:space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -2572,13 +2591,14 @@ video {
     border-radius: 15.625rem;
   }
 
-  .md\:p-20 {
-    padding: 5rem;
-  }
-
   .md\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
+  }
+
+  .md\:py-48 {
+    padding-top: 12rem;
+    padding-bottom: 12rem;
   }
 
   .md\:py-10 {
@@ -2596,19 +2616,19 @@ video {
     padding-right: 4rem;
   }
 
+  .md\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
   .md\:py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
   }
 
-  .md\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-
-  .md\:py-48 {
-    padding-top: 12rem;
-    padding-bottom: 12rem;
+  .md\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
   }
 
   .md\:py-24 {
@@ -2616,14 +2636,9 @@ video {
     padding-bottom: 6rem;
   }
 
-  .md\:py-20 {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-  }
-
-  .md\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .md\:px-24 {
@@ -2647,6 +2662,14 @@ video {
     padding-top: 10rem;
   }
 
+  .md\:pl-24 {
+    padding-left: 6rem;
+  }
+
+  .md\:pr-12 {
+    padding-right: 3rem;
+  }
+
   .md\:text-left {
     text-align: left;
   }
@@ -2660,6 +2683,21 @@ video {
     line-height: 1;
   }
 
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -2668,16 +2706,6 @@ video {
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
-  }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 
   .md\:text-7xl {
@@ -2693,11 +2721,6 @@ video {
   .md\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
-  }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 
   .md\:first-letter\:top-fiftyPercent::first-letter {
@@ -2962,5 +2985,16 @@ video {
   .xl\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
+  }
+}
+
+@media (orientation: landscape) {
+  .landscape\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .landscape\:overflow-y-auto {
+    overflow-y: auto;
   }
 }
