--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -633,12 +633,12 @@ video {
   bottom: -0.5rem;
 }
 
-.-right-fiftyPercent {
-  right: -50%;
+.top-0 {
+  top: 0px;
 }
 
-.top-28 {
-  top: 7rem;
+.-top-20 {
+  top: -5rem;
 }
 
 .right-5 {
@@ -677,10 +677,6 @@ video {
   right: 0px;
 }
 
-.top-0 {
-  top: 0px;
-}
-
 .-left-3 {
   left: -0.75rem;
 }
@@ -713,18 +709,6 @@ video {
   bottom: 3rem;
 }
 
-.left-20 {
-  left: 5rem;
-}
-
-.-left-20 {
-  left: -5rem;
-}
-
-.-top-20 {
-  top: -5rem;
-}
-
 .z-50 {
   z-index: 50;
 }
@@ -733,16 +717,12 @@ video {
   z-index: 30;
 }
 
-.z-100 {
-  z-index: 100;
+.z-200 {
+  z-index: 200;
 }
 
 .z-20 {
   z-index: 20;
-}
-
-.z-200 {
-  z-index: 200;
 }
 
 .col-span-3 {
@@ -844,6 +824,14 @@ video {
   height: 100%;
 }
 
+.h-40 {
+  height: 10rem;
+}
+
+.h-eightyPercent {
+  height: 80%;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -888,18 +876,6 @@ video {
   height: 2rem;
 }
 
-.h-ninetyPercent {
-  height: 90%;
-}
-
-.h-eightyPercent {
-  height: 80%;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
 .max-h-40 {
   max-height: 10rem;
 }
@@ -920,12 +896,12 @@ video {
   width: 100%;
 }
 
-.w-thirtyPercent {
-  width: 30%;
+.w-fiftyPercent {
+  width: 50%;
 }
 
-.w-40 {
-  width: 10rem;
+.w-52 {
+  width: 13rem;
 }
 
 .w-8 {
@@ -961,8 +937,8 @@ video {
   width: 90%;
 }
 
-.w-350 {
-  width: 21.875rem;
+.w-40 {
+  width: 10rem;
 }
 
 .w-12 {
@@ -1017,22 +993,6 @@ video {
   width: 95%;
 }
 
-.w-500 {
-  width: 31.25rem;
-}
-
-.w-48 {
-  width: 12rem;
-}
-
-.w-fiftyPercent {
-  width: 50%;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
 .min-w-full {
   min-width: 100%;
 }
@@ -1041,12 +1001,12 @@ video {
   max-width: 31.25rem;
 }
 
-.max-w-160px {
-  max-width: 10rem;
-}
-
 .max-w-xl {
   max-width: 36rem;
+}
+
+.max-w-160px {
+  max-width: 10rem;
 }
 
 .max-w-md {
@@ -1061,10 +1021,6 @@ video {
   max-width: 42rem;
 }
 
-.max-w-lg {
-  max-width: 32rem;
-}
-
 .grow {
   flex-grow: 1;
 }
@@ -1076,16 +1032,6 @@ video {
 
 .-translate-x-fiftyPercent {
   --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-twentyFivePercent {
-  --tw-translate-x: 25%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-8 {
-  --tw-translate-y: 2rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1111,12 +1057,12 @@ video {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid-rows-2 {
@@ -1191,12 +1137,12 @@ video {
   gap: 0.625rem;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .gap-4 {
@@ -1239,12 +1185,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-16 > :not([hidden]) ~ :not([hidden]) {
@@ -1451,6 +1391,14 @@ video {
   background-color: #FFBD0033;
 }
 
+.bg-black\/30 {
+  background-color: rgb(0 0 0 / 0.3);
+}
+
+.bg-transparent {
+  background-color: transparent;
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1474,10 +1422,6 @@ video {
 .bg-brandGray18x {
   --tw-bg-opacity: 1;
   background-color: rgb(246 246 246 / var(--tw-bg-opacity));
-}
-
-.bg-transparent {
-  background-color: transparent;
 }
 
 .bg-brandGray21x {
@@ -1548,10 +1492,6 @@ video {
 .bg-brandBlue4x {
   --tw-bg-opacity: 1;
   background-color: rgb(57 161 255 / var(--tw-bg-opacity));
-}
-
-.bg-black\/30 {
-  background-color: rgb(0 0 0 / 0.3);
 }
 
 .p-10 {
@@ -1688,16 +1628,6 @@ video {
   padding-bottom: 0.25rem;
 }
 
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.py-twentyPercent {
-  padding-top: 20%;
-  padding-bottom: 20%;
-}
-
 .pt-8 {
   padding-top: 2rem;
 }
@@ -1708,6 +1638,14 @@ video {
 
 .pb-24 {
   padding-bottom: 6rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
 .pb-5 {
@@ -1770,10 +1708,6 @@ video {
   padding-bottom: 2rem;
 }
 
-.pt-24 {
-  padding-top: 6rem;
-}
-
 .pb-3 {
   padding-bottom: 0.75rem;
 }
@@ -1784,26 +1718,6 @@ video {
 
 .pt-28 {
   padding-top: 7rem;
-}
-
-.pl-24 {
-  padding-left: 6rem;
-}
-
-.pr-16 {
-  padding-right: 4rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pr-12 {
-  padding-right: 3rem;
-}
-
-.pb-12 {
-  padding-bottom: 3rem;
 }
 
 .text-left {
@@ -1870,9 +1784,9 @@ video {
   line-height: 1.5rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-xl {
@@ -1880,19 +1794,9 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
 }
 
 .text-5xl {
@@ -2023,15 +1927,15 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2187,26 +2091,21 @@ video {
   text-decoration-line: underline;
 }
 
-.hover\:shadow-md:hover {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:shadow-md:hover {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:shadow-gray-700:hover {
   --tw-shadow-color: #374151;
   --tw-shadow: var(--tw-shadow-colored);
-}
-
-.focus\:bg-blue-700:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
 .focus\:bg-brandDarkGreen2x:focus {
@@ -2250,6 +2149,15 @@ video {
     bottom: -5rem;
   }
 
+  .sm\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .sm\:h-auto {
+    height: auto;
+  }
+
   .sm\:h-16 {
     height: 4rem;
   }
@@ -2270,25 +2178,16 @@ video {
     height: 20rem;
   }
 
-  .sm\:h-auto {
-    height: auto;
-  }
-
-  .sm\:h-fit {
-    height: -moz-fit-content;
-    height: fit-content;
-  }
-
   .sm\:w-500 {
     width: 31.25rem;
   }
 
-  .sm\:w-16 {
-    width: 4rem;
-  }
-
   .sm\:w-eightyPercent {
     width: 80%;
+  }
+
+  .sm\:w-16 {
+    width: 4rem;
   }
 
   .sm\:w-9 {
@@ -2319,9 +2218,8 @@ video {
     width: 100%;
   }
 
-  .sm\:translate-x-fiftyPercent {
-    --tw-translate-x: 50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  .sm\:w-fiftyPercent {
+    width: 50%;
   }
 
   .sm\:grid-cols-3 {
@@ -2379,24 +2277,24 @@ video {
     line-height: 2rem;
   }
 
-  .sm\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
   }
 
-  .sm\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .sm\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .placeholder\:sm\:text-xl::-moz-placeholder {
@@ -2411,8 +2309,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:left-28 {
-    left: 7rem;
+  .md\:top-auto {
+    top: auto;
+  }
+
+  .md\:-left-20 {
+    left: -5rem;
   }
 
   .md\:right-36 {
@@ -2421,18 +2323,6 @@ video {
 
   .md\:-right-36 {
     right: -9rem;
-  }
-
-  .md\:-left-20 {
-    left: -5rem;
-  }
-
-  .md\:top-fiftyPercent {
-    top: 50%;
-  }
-
-  .md\:top-auto {
-    top: auto;
   }
 
   .md\:block {
@@ -2457,10 +2347,6 @@ video {
 
   .md\:h-6 {
     height: 1.5rem;
-  }
-
-  .md\:h-full {
-    height: 100%;
   }
 
   .md\:max-h-52 {
@@ -2548,16 +2434,6 @@ video {
     max-width: 36rem;
   }
 
-  .md\:translate-x-0 {
-    --tw-translate-x: 0px;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .md\:-translate-y-fiftyPercent {
-    --tw-translate-y: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .md\:-translate-x-0 {
     --tw-translate-x: -0px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2565,10 +2441,6 @@ video {
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:justify-center {
-    justify-content: center;
   }
 
   .md\:justify-between {
@@ -2672,6 +2544,14 @@ video {
     padding-right: 6rem;
   }
 
+  .md\:pl-24 {
+    padding-left: 6rem;
+  }
+
+  .md\:pr-12 {
+    padding-right: 3rem;
+  }
+
   .md\:pb-0 {
     padding-bottom: 0px;
   }
@@ -2686,14 +2566,6 @@ video {
 
   .md\:pt-40 {
     padding-top: 10rem;
-  }
-
-  .md\:pl-24 {
-    padding-left: 6rem;
-  }
-
-  .md\:pr-12 {
-    padding-right: 3rem;
   }
 
   .md\:text-left {
@@ -2747,10 +2619,6 @@ video {
   .md\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
-  }
-
-  .md\:first-letter\:top-fiftyPercent::first-letter {
-    top: 50%;
   }
 }
 
@@ -2807,6 +2675,10 @@ video {
     height: 2.25rem;
   }
 
+  .lg\:w-thirtyPercent {
+    width: 30%;
+  }
+
   .lg\:w-48 {
     width: 12rem;
   }
@@ -2818,10 +2690,6 @@ video {
   .lg\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
-  }
-
-  .lg\:w-thirtyPercent {
-    width: 30%;
   }
 
   .lg\:w-fiftyPercent {
@@ -3011,16 +2879,5 @@ video {
   .xl\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
-  }
-}
-
-@media (orientation: landscape) {
-  .landscape\:h-fit {
-    height: -moz-fit-content;
-    height: fit-content;
-  }
-
-  .landscape\:overflow-y-auto {
-    overflow-y: auto;
   }
 }
