--- a/assets/css/impact.css
+++ b/assets/css/impact.css
@@ -63,6 +63,9 @@ body a, li{
 .women-text{
     font-size: 1.2rem !important;
 }
+.row-2{
+    margin: 20px 0;
+}
 .click-here a{
     font-size: 1rem !important;
 }
@@ -280,19 +283,20 @@ footer li a:hover{
    }
 } */
 @media (min-width:992px){
-    .hero-text{
-        padding: 0rem;
-    }
+   
+      
+      .scribbling-impact{
+          position: absolute;
+          width: 25%;
+          top: 300px;
+          left: -80px !important;
+          
+      }
     .content-title{
-        font-size: 2.5rem;
-        margin-bottom: 25px;
+        font-size: 1.8rem !important;
     }
-    .slider-title{
-        font-weight: 700;
-    }
-    .plastic-report{
-        font-size: 1.2rem !important;
-   }
+     
+   
    
 }
 @media (min-width:1200px){
